--- a/src/checkers.css
+++ b/src/checkers.css
@@ -5,30 +5,26 @@ body {
   overflow-y: hidden;
   height: 100%;
   display: flex;
-  <!-- zoom: 50%; -->
 }
 .box {
   display: inline-block;
-  width: 110px;
-  height: 110px;
-  margin: 5px;
-  padding: auto;
-  padding-right: 35px;
+  width: 12%;
+  height: 11.95%;
   justify-content: auto;
-  right: 10px;
 }
+
 .container {
   background-color: rgba(139, 69, 19, 1);
   border-radius: 0px;
   padding-left: 0px;
   padding-right: 0px;
   padding-top: 0px;
-  margin: 0 auto;
-  float: left;
   align-content: left;
   position: fixed;
-  bottom: 350px;
-  left: 10px;
+  top: 15%;
+  left: .25%;
+  height: 70%;
+  width: 40%;
 }
 .first-color {
   background-color: black;
@@ -39,42 +35,42 @@ body {
 
 .settings {
   text-align: center;
-  width: 1000px;
-  border: 10px solid black;
-  padding: 250px;
+  width: 25%;
+  top: 52.5%;
+  border: 2px solid black;
+  min-height: 32.5%;
+  min-width: 44.75%;
   margin: 0 auto;
   border-radius: 0px;
   float: left;
   align-content: left;
   position: fixed;
-  bottom: 300px;
-  right: 10px;
+  right: .25%;
 }
 
 .textExplanation {
   text-align: center;
-  width: 1000px;
-  border: 10px solid black;
-  padding: 250px;
+  top: 15%;
+  border: 2px solid black;
+  min-height: 32.5%;
+  min-width: 44.75%;
   margin: 0 auto;
   border-radius: 0px;
   align-content: left;
   position: fixed;
-  top: 150px;
-  right: 10px;
-  box-sizing: fixed;
+  right: .25%;
 }
 
 .visualization {
   text-align: center;
-  width: 2650px;
-  border: 10px solid black;
-  padding: 100px;
+  width: 100%;
+  min-height: 25%;
+  min-width: 50%;
+  border: 2px solid black;
   margin: 0 auto;
   border-radius: 0px;
   align-content: center;
   position: fixed;
-  bottom: 5px;
+  top: 90%;
   padding-left: 90px;
-  right: 10px;
 }
