--- a/src/gameboard_dev/style.css
+++ b/src/gameboard_dev/style.css
@@ -1,40 +1,52 @@
 #gameboard
 {
-    width: 320px;
-    height: 320px;
-    display: flex;
-    flex-wrap: wrap;
+    display: inline-grid;
+    grid-template-columns: repeat(auto-fit, 12.5%);
+    grid-template-rows: repeat(auto-fit, 12.5%);
+    position: fixed;
+    top: 15%;
+    left: .25%;
+    min-height: 70%;
+    min-width: 40%;
+    max-height: 70%;
+    max-width: 40%;
+    border: solid .7vh white;
 }
 
-.square svg 
+.square img
 {
-    height: 30px;
-    width: 30px;
-    margin: 5px;
+    max-height: 70%;
+    max-width: 65%;
+    padding-left: 10%;
+    padding-top: 6.5%;
+    align-content: center;
 }
 
 .square
 {
-    height: 40px;
-    width: 40px;
+    display: inline;
+    padding-left: 12%;
+    padding-top: 12%;
 }
 
-.beige
+.dark
 {
-    background-color: rgb(110, 110, 98);
+    background-color: #272727;
 }
 
-.brown
+.light
 {
-    background-color: brown;
+    background-color: #EFF1F3;
 }
 
-.black
+.blackPiece
 {
-    fill: black;
+    height: 9vh;
+    width: 5vw;
 }
 
-.red
+.redPiece
 {
-    fill: darkred;
+    height: 9vh;
+    width: 5vw;
 }
