--- a/src/styles.css.css
+++ b/src/styles.css.css
@@ -300,3 +300,16 @@ footer {
   padding: 3px;
   height: auto;
 }
+
+.feedback_button {
+    display: inline-block;
+    padding: 15px 30px;
+    background-color: rgba(0, 123, 255, 0.7);
+    color: white;
+    text-decoration: none;
+    border: 2px solid rgb(0, 123, 255);
+    border-radius: 5px;
+    font-weight: bold;
+    margin-top: 20px;
+    font-size: 18px;
+}
