Added explanation ability
I added the ability to give explanations for the bot's actions. I had to make some changes to make the explanation box visible, as the settings box hid it (these changes are to do with the range sliders, as I had to reduce their height to show the box). Since the settings box is now smaller, the tooltips covered the setting names, so I made them invisible until a user hovers over their sliders

--- a/src/checkers.css
+++ b/src/checkers.css
@@ -37,12 +37,18 @@ body {
   border: 2px solid black;
   min-height: 32.5%;
   min-width: 44.75%;
+  max-height: 35%;
   margin: 0 auto;
   border-radius: 0px;
   float: left;
   align-content: left;
   position: fixed;
   right: .25%;
+  overflow: hidden;
+}
+
+.textExplanation:hover .textExplanation:active .textExplanation:focus{
+  overflow: scroll;
 }
 
 .settings {
