--- a/src/style.css
+++ b/src/style.css
@@ -1,183 +1,185 @@
-#gameboard
-{
-    display: inline-grid;
-    grid-template-columns: repeat(auto-fit, 12.5%);
-    grid-template-rows: repeat(auto-fit, 12.5%);
-    position: fixed;
-    top: 15%;
-    left: .25%;
-    min-height: 70%;
-    min-width: 40%;
-    max-height: 70%;
-    max-width: 40%;
-    border: solid .7vh white;
+#gameboard {
+  display: inline-grid;
+  grid-template-columns: repeat(auto-fit, 12.5%);
+  grid-template-rows: repeat(auto-fit, 12.5%);
+  position: fixed;
+  top: 15%;
+  left: 0.25%;
+  min-height: 70%;
+  min-width: 40%;
+  max-height: 70%;
+  max-width: 40%;
+  border: solid 0.7vh white;
 }
 
-.square img
-{
-    max-height: 70%;
-    max-width: 65%;
-    min-height: 70%;
-    min-width: 65%;
-    padding-left: 10%;
-    padding-top: 6.5%;
-    align-content: center;
+.square img {
+  max-height: 70%;
+  max-width: 65%;
+  min-height: 70%;
+  min-width: 65%;
+  padding-left: 10%;
+  padding-top: 6.5%;
+  align-content: center;
 }
 
-.square
-{
-    display: inline;
-    padding-left: 12%;
-    padding-top: 12%;
+.square {
+  display: inline;
+  padding-left: 12%;
+  padding-top: 12%;
 }
 
-.dark
-{
-    background-color: #272727;
+.dark {
+  background-color: #272727;
 }
 
-.light
-{
-    background-color: #EFF1F3;
+.light {
+  background-color: #eff1f3;
 }
 
-.blackPiece
-{
-    height: 9vh;
-    width: 5vw;
+.blackPiece {
+  height: 9vh;
+  width: 5vw;
 }
 
-.redPiece
-{
-    height: 9vh;
-    width: 5vw;
+.redPiece {
+  height: 9vh;
+  width: 5vw;
 }
 
 /*Settings Box*/
 .settings {
-    background-color: #adadad;
+  background-color: #adadad;
+  font-size: 1.0625rem;
+  padding: 0.0625rem 3%;
 }
-
 
 /* Slider Start */
 
 .range-slider {
-    max-width: 30em;
-    margin: 1em auto;
-    position: relative;
-    display: flex;
+  max-width: 30em;
+  margin: 1em auto;
+  position: relative;
+  display: flex;
 }
 
 .range-slider .slider {
-    -webkit-appearance: none;
-    width: 100%;
-    height: 0.5em;
-    outline: none;
-    border-radius: 3px;
-    background: #1f1f1f;
-    box-shadow: 3px 3px 6px #000,
-        inset 1px 1px 1px #909090;
+  -webkit-appearance: none;
+  width: 100%;
+  height: 0.5em;
+  outline: none;
+  border-radius: 0.1875rem;
+  background: #1f1f1f;
+  box-shadow: 0.1875rem 0.1875rem 0.375rem #000,
+    inset 0.0625rem 0.0625rem 0.0625rem #909090;
 }
 
 .range-slider .slider::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    width: 1.7em;
-    height: 1.7em;
-    cursor: pointer;
-    z-index: 3;
-    position: relative;
+  -webkit-appearance: none;
+  width: 1.7em;
+  height: 1.7em;
+  cursor: pointer;
+  z-index: 3;
+  position: relative;
 }
 
 .range-slider .slider-thumb {
-    
-    position: absolute;
-    width: 1.7em;
-    height: 1.7em;
-    background: #090909;
-    border-radius: 50%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 2;
-    box-shadow: insert 0px 1px 2px #909090;
+  position: absolute;
+  width: 1.7em;
+  height: 1.7em;
+  background: #090909;
+  border-radius: 50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  box-shadow: insert 0rem 0.0625rem 0.125rem #909090;
 }
 
 .range-slider .slider-thumb::before {
-    content: '';
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 0.7em;
-    height: 0.7em;
-    background: #333;
-    border-radius: inherit;
-    transition: 0.3s;
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 0.7em;
+  height: 0.7em;
+  background: #333;
+  border-radius: inherit;
+  transition: 0.3s;
 }
 
 .range-slider:hover .slider-thumb:before {
-    background: #ffffff;
+  background: #ffffff;
 }
 
 .range-slider .tooltip {
-    visibility: hidden;
-    position: absolute;
-    width: 2em;
-    height: 2em;
-    top: -2em;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background: #000000;
-    text-align: center;
-    line-height: 35px;
-    color: #fff;
-    border-radius: 20px;
-    box-shadow: 0px 3px 10px #000000,
-        insert 0px 1px 2px #909090;
+  visibility: hidden;
+  position: absolute;
+  width: 2em;
+  height: 2em;
+  top: -2em;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #000000;
+  text-align: center;
+  line-height: 2.1875rem;
+  color: #fff;
+  border-radius: 1.25rem;
+  box-shadow: 0rem 0.1875rem 0.625rem #000000,
+    insert 0rem 0.0625rem 0.125rem #909090;
 }
 
 .range-slider:hover .tooltip {
-    animation: pop 0.5s;
-    visibility: visible;
+  animation: pop 0.5s;
+  visibility: visible;
 }
 
 .range-slider .tooltip::before {
-    content: '';
-    position: absolute;
-    width: 0;
-    height: 0;
-    border-left: 6px solid transparent;
-    border-right: 6px solid transparent;
-    border-top: 10px solid #000000;
-    bottom: -0.5em;
-    left: 50%;
-    transform: translate(-50%);
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 0;
+  border-left: 0.375rem solid transparent;
+  border-right: 0.375rem solid transparent;
+  border-top: 0.625rem solid #000000;
+  bottom: -0.5em;
+  left: 50%;
+  transform: translate(-50%);
 }
 
 .range-slider .progress {
-    width: 50%;
-    height: 1.3em;
-    border-radius: 3px;
-    background: linear-gradient(
-        90deg, rgb(23, 55, 184) 0%, #f50505 100%
-    );
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    left: 0;
-    pointer-events: none;
+  width: 50%;
+  height: 1.3em;
+  border-radius: 0.1875rem;
+  background: linear-gradient(90deg, rgb(23, 55, 184) 0%, #f50505 100%);
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  left: 0;
+  pointer-events: none;
 }
 
 @media screen and (max-width: 700px) {
-    .range-slider {
-        width: 100%;
-        user-select: none;
-    }
+  .range-slider {
+    width: 100%;
+    user-select: none;
+  }
 }
 
-@keyframes pop{
-    50% {transform: scale(1.5);}
+@keyframes pop {
+  50% {
+    transform: scale(1.5);
+  }
 }
 
 /* Slider End */
+
+.textExplanation {
+  font-size: 1.5625rem;
+  padding: 0.3125rem 3%;
+}
+
+.visualization {
+  padding: 1%;
+}
