Remove visualization section + change settings background

--- a/src/style.css
+++ b/src/style.css
@@ -48,7 +48,7 @@
 
 /*Settings Box*/
 .settings {
-  background-color: #adadad;
+  background-color: tan;
   font-size: 1.0625rem;
   padding: 0.0625rem 3%;
 }
